crates/mockiato-compiletest/tests/ui/non_method_items.stderr
error: Traits are only allowed to contain methods
 --> $DIR/non_method_items.rs:9:5
  |
9 |     const BAR: usize;
  |     ^^^^^
  |
note: Required for mockable traits
 --> $DIR/non_method_items.rs:7:1
  |
7 | #[mockable]
  | ^^^^^^^^^^^

error: Traits are only allowed to contain methods
  --> $DIR/non_method_items.rs:11:5
   |
11 |     type Baz;
   |     ^^^^
   |
note: Required for mockable traits
  --> $DIR/non_method_items.rs:7:1
   |
7  | #[mockable]
   | ^^^^^^^^^^^

error: Traits are only allowed to contain methods
  --> $DIR/non_method_items.rs:13:5
   |
13 |     macro_in_trait!();
   |     ^^^^^^^^^^^^^^
   |
note: Required for mockable traits
  --> $DIR/non_method_items.rs:7:1
   |
7  | #[mockable]
   | ^^^^^^^^^^^

error: aborting due to 3 previous errors

